	PR middle-end/18096 	* config/rs6000/rs6000.c (rs6000_emit_allocate_stack): Check that 	the stack adjustment, "size", is valid for Pmode.  If the stack 	frame is too large, generate a trap insn and issue a warning.

* gcc.dg/pr18096-1.c: New test case.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@89896 138bc75d-0d04-0410-961f-82ee72b054a4